force-app/main/default/objects/FIN_BusinessUnit__c/FIN_BusinessUnit__c.object-meta.xml
<CustomObject>
    <label>Business Unit</label>
    <nameField>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Units</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>