force-app/main/default/objects/FIN_BusinessUnit__c/fields/FIN_Revenues__c.field-meta.xml
<CustomField>
    <fullName>FIN_Revenues__c</fullName>
    <formula>&apos;test&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenues</label>
    <type>Text</type>
</CustomField>