force-app/main/default/objects/FIN_BusinessUnit__c/recordTypes/FIN_SWE_Business_Unit.recordType-meta.xml
<RecordType>
    <fullName>FIN_SWE_Business_Unit</fullName>
    <active>true</active>
    <label>SWE Business Unit</label>
</RecordType>