force-app/main/default/objects/FIN_BusinessUnit__c/recordTypes/FIN_UK_Business_Unit.recordType-meta.xml
<RecordType>
    <fullName>FIN_UK_Business_Unit</fullName>
    <active>true</active>
    <label>UK Business Unit</label>
</RecordType>