force-app/main/default/objects/FIN_BusinessUnit__c/recordTypes/FIN_US_Business_Unit.recordType-meta.xml
<RecordType>
    <fullName>FIN_US_Business_Unit</fullName>
    <active>true</active>
    <label>US Business Unit</label>
</RecordType>