force-app/main/default/objects/FIN_BusinessUnit__c/validationRules/Enforce_Right_Currency_Business_Unit.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Right_Currency_Business_Unit</fullName>
    <active>true</active>
    <description>Validation checks whether the given currency is consistent with the given Record Type.</description>
    <errorConditionFormula>OR(
AND(RecordType.Name == &apos;SWE Business Unit&apos;,!ISPICKVAL(CurrencyIsoCode,&apos;SEK&apos;)),
AND(RecordType.Name == &apos;UK Business Unit&apos; ,!ISPICKVAL(CurrencyIsoCode,&apos;GBP&apos;)),
AND(RecordType.Name == &apos;US Business Unit&apos; ,!ISPICKVAL(CurrencyIsoCode,&apos;USD&apos;))

)</errorConditionFormula>
    <errorMessage>The Currency must match the Record Type.</errorMessage>
</ValidationRule>