force-app/main/default/objects/FIN_BusinessUnit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FIN_Description__c</columns>
    <columns>Region__c</columns>
    <columns>FIN_StartDate__c</columns>
    <columns>FIN_EndDate__c</columns>
    <columns>FIN_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>