force-app/main/default/objects/FIN_BusinessUnit__c/listViews/FIN_UK_Business_Units.listView-meta.xml
<ListView>
    <fullName>FIN_UK_Business_Units</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>UK</value>
    </filters>
    <label>UK Business Units</label>
    <sharedTo>
        <group>UK_Region</group>
    </sharedTo>
</ListView>