force-app/main/default/objects/FIN_BusinessUnit__c/listViews/SWE_Business_Units.listView-meta.xml
<ListView>
    <fullName>SWE_Business_Units</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>SWE</value>
    </filters>
    <label>SWE Business Units</label>
    <sharedTo>
        <group>SWE_Region</group>
    </sharedTo>
</ListView>